--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h1> Peter Kapp </h1>
     <p>
-    <a href="https://github.com/pkapp22/EDI">
+    <a href="https://pkapp22.github.io/EDI/">
 EDI Class Portfolio
     </a>
     </p>
