--- a/CrosswordCode/index.html
+++ b/CrosswordCode/index.html
@@ -1,6 +1,9 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
+<!DOCTYPE html><html><head>
+    <script src="p5.min.js"></script>
+   <script src="p5.svg.js"></script>
+    <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
+       <script src="https://unpkg.com/p5.js-svg@1.1.1"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
