--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta charset="utf-8">
   </head>
 
-  <title>|~P. Kapp E+D I~|</title>
+  <title>|~P. Kapp E&D1~|</title>
 
   <body>
 
     <h1> Peter Kapp </h1>
     <p>
-    <a href="https://pkapp22.github.io/EDI">
-EDI Class Portfolio
+    <a href="https://github.com/eeriley99/EDI_2122">
+      E&D I class materials
     </a>
     </p>
 
@@ -24,6 +24,7 @@ EDI Class Portfolio
 
       <tr>
         <td></td>
+      <h3>  LOGO PROJECT <h3>
         <td></td>
         <td></td>
       </tr>
