--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
       <tr>
         <td></td>
-      <h3>  LOGO PROJECT <h3>
+      <h3>  LOGO PROJECT </h3>
+      <a><img src="Logo/KappLogoV3Final.jpg" </a>
         <td></td>
         <td></td>
       </tr>
