--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <tr>
         <td></td>
       <h3>  LOGO PROJECT </h3>
-      <a><img src="Logo/FinalLogoDesign.png" width = 70% </a>
+      <a href= "Logo/LogoReflection.html"><img src="Logo/FinalLogoDesign.png" width = 400 > </a>
         <td></td>
         <td></td>
       </tr>
