--- a/index.html
+++ b/index.html
@@ -20,24 +20,42 @@
 
     <script src="sketch.js"></script>
 
-    <table>
+     <table>
 
-      <tr>
-        <td></td>
-      <h3>  LOGO PROJECT </h3>
-      <a href= "Logo/LogoReflection.html"><img src="Logo/FinalLogoDesign.png" width = 400 > </a>
-        <td></td>
-        <td></td>
-      </tr>
+       <tr>
+         <td>
+           <h3> LOGO PROJECT </h3>
+           <a href = "Logo/LogoReflection.html"><img src="Logo/FinalLogoDesign.png" width = 70%</a>
+         </td>
 
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
+         <td>
+           <h3> SLOT ANIMAL </h3>
+         <a href = "SlotAnimal/SlotAnimal.html"><img src="SlotAnimal/FinalElephant" width = 70%</a>
+         </td>
+         <td>
+           <h3> PRESS FIT BOX </h3>
+           <a href = "PressFit/PressFitReflection.html"><img src="PressFit/FinalBoxPhoto.jpeg" width = 70%</a>
+         </td>
+       </tr>
 
-    </table>
+       <tr>
+         <td>
+           <h3> BLINKY BADGE</h3>
+          <a href = "BlinkyBadge/knolledParts.jpg"><img src = 'BlinkyBadge/blinkybadge.gif' width=70%></a>
+         </td>
 
-  </body>
+         <td>
+           <h3> MACHINE DRAWING </h3>
+           <a href = "CreativeCoding/MachDrawReflection.html"><img src = 'CreativeCoding/MachDraw/export_svg/FinalMachDraw.jpg' width=70%></a>
+         </td>
+         <td>
+           <h3> CREATIVE CODING </h3>
+           <a href = "CreativeCoding/CreativeCodingReflection.html"><img src = 'gifs/flowerguy.gif' width=70%
+             <body style = "background-color: black;">  </a>
+         </td>
+       </tr>
+     </table>
 
-</html>
+   </body>
+
+ </html>
