--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
          <td>
            <h3> SLOT ANIMAL </h3>
-         <a href = "SlotAnimal/SlotAnimal.html"><img src="SlotAnimal/FinalElephant" width = 70%</a>
+         <a href = "SlotAnimal/SlotAnimal.html"><img src="SlotAnimal/FinalElephant.png" width = 70%</a>
          </td>
          <td>
            <h3> PRESS FIT BOX </h3>
