--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          </td>
          <td>
            <h3> PRESS FIT BOX </h3>
-           <a href = "PressFit/PressFitReflection.html"><img src="PressFit/FinalBoxPhoto.jpeg" width = 70%</a>
+           <a href = "PressFit/PressFitReflection.html"><img src="PressFit/PressFitBox.png" width = 70%</a>
          </td>
        </tr>
 
