--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
        <tr>
          <td>
            <h3> BLINKY BADGE</h3>
-          <a href = "BlinkyBadge/knolledParts.jpg"><img src = 'BlinkyBadge/blinkybadge.gif' width=70%></a>
+          <a href = "BlinkyBadge/BadgeParts.jpeg"><img src = 'BlinkyBadge/KappBadge.gif' width=70%></a>
          </td>
 
          <td>
            <h3> MACHINE DRAWING </h3>
-           <a href = "CreativeCoding/MachDrawReflection.html"><img src = 'CreativeCoding/MachDraw/export_svg/FinalMachDraw.jpg' width=70%></a>
+           <a href = "MachineDraw/KappMachineDraw.html"><img src = 'MachineDraw/KappCrossword.png' width=70%></a>
          </td>
          <td>
            <h3> CREATIVE CODING </h3>
-           <a href = "CreativeCoding/CreativeCodingReflection.html"><img src = 'gifs/flowerguy.gif' width=70%
+           <a href = "CreativeCoding/CreativeCodingReflection.html"><img src = 'CreativeCoding/Snowflake grid.png' width=70%
              <body style = "background-color: black;">  </a>
          </td>
        </tr>
