--- a/MachineDraw/KappMachineDraw.html
+++ b/MachineDraw/KappMachineDraw.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-
+<script src="../p5.js"></script>
+<script src="../p5.sound.min.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
 <head>
 
     <style>
@@ -20,7 +22,7 @@
 
 <body>
 
-
+<a href="../index.html"><h2> Home</h2></a>
 
      <iframe src="https://docs.google.com/document/d/e/2PACX-1vQZ6WSK-n9WK5sgINB4HVkaTX-9bCOzIaqy5rgK_XAdQA0OSRkp7GASKLxNcq_KmjwxaQV__6SX1fQI/pub?embedded=true"></iframe>
 
