--- a/SlotAnimal/SlotAnimal.html
+++ b/SlotAnimal/SlotAnimal.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-
+<script src="p5.js"></script>
+<script src="p5.sound.min.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
 <head>
 
     <style>
@@ -21,6 +23,6 @@
 <body>
 
 
-
+<a href="../index.html"><h2> Home</h2></a>
   <iframe src="https://docs.google.com/document/d/e/2PACX-1vTfbMi-5pXEStPP7SK0vs1pM7A6vwC56NpSZe4DDw7_ZNvrPc8L1c6VDMHfXQ4rXaDxw8CtwcVdRCZP/pub?embedded=true"></iframe>
 </body>
